log/build_2026-05-09_13-00-09/card_scanner/stdout.log
Built target ament_cmake_python_symlink_card_scanner
running egg_info
writing card_scanner.egg-info/PKG-INFO
writing dependency_links to card_scanner.egg-info/dependency_links.txt
writing top-level names to card_scanner.egg-info/top_level.txt
reading manifest file 'card_scanner.egg-info/SOURCES.txt'
writing manifest file 'card_scanner.egg-info/SOURCES.txt'
Built target ament_cmake_python_build_card_scanner_egg
-- Install configuration: ""
-- Execute custom install script
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/environment/pythonpath.sh
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/environment/pythonpath.dsv
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/local/lib/python3.10/dist-packages/card_scanner-1.0.0-py3.10.egg-info/PKG-INFO
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/local/lib/python3.10/dist-packages/card_scanner-1.0.0-py3.10.egg-info/SOURCES.txt
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/local/lib/python3.10/dist-packages/card_scanner-1.0.0-py3.10.egg-info/dependency_links.txt
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/local/lib/python3.10/dist-packages/card_scanner-1.0.0-py3.10.egg-info/top_level.txt
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/local/lib/python3.10/dist-packages/card_scanner/__init__.py
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/local/lib/python3.10/dist-packages/card_scanner/card_scanner_node.py
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/lib/card_scanner/card_scanner_node.py
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/launch/card_scanner.launch.py
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/config/params.yaml
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/ament_index/resource_index/package_run_dependencies/card_scanner
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/ament_index/resource_index/parent_prefix_path/card_scanner
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/environment/ament_prefix_path.sh
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/environment/ament_prefix_path.dsv
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/environment/path.sh
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/environment/path.dsv
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/local_setup.bash
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/local_setup.sh
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/local_setup.zsh
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/local_setup.dsv
-- Symlinking: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/package.dsv
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/ament_index/resource_index/packages/card_scanner
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/cmake/card_scannerConfig.cmake
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/cmake/card_scannerConfig-version.cmake
-- Up-to-date symlink: /home/yash_2280/card_scanner_ws/install/card_scanner/share/card_scanner/package.xml
Listing '/home/yash_2280/card_scanner_ws/install/card_scanner/local/lib/python3.10/dist-packages/card_scanner'...
Compiling '/home/yash_2280/card_scanner_ws/install/card_scanner/local/lib/python3.10/dist-packages/card_scanner/card_scanner_node.py'...
***   File "/home/yash_2280/card_scanner_ws/install/card_scanner/local/lib/python3.10/dist-packages/card_scanner/card_scanner_node.py", line 1
    cat > ~/card_scanner_ws/src/card_scanner/card_scanner/card_scanner_node.py << 'PYEOF'
           ^
SyntaxError: invalid syntax

